# drake_py_dep

./: MODULE.bazel
drake_dep/: BUILD  test_drake_imports.py  test_drake_imports_with_foo.py
drake_dep/pybind/: BUILD  foo_binding.cpp
drake_dep/src/: BUILD  foo.cpp  foo.h
