###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "rules_python", version = "0.40.0")
#bazel_dep(name = "pybind11_bazel", version = "2.13.6")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

# This version configures the Python version that's compatible with the binding
python.toolchain(python_version = "3.10")
use_repo(python, "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.10",
    requirements_lock = "//drake_dep/third_party:requirements.txt",
)
use_repo(pip, "pip")
